include(FindPackageHandleStandardArgs)
include(SelectLibraryConfigurations)

find_library(SPIRV_TOOLS_LIBRARY_DEBUG NAMES SPIRV-Toolsd HINTS ${CMAKE_INSTALL_PREFIX} PATH_SUFFIXES DEBUG/lib)
find_library(SPIRV_TOOLS_LIBRARY_RELEASE NAMES SPIRV-Tools HINTS ${CMAKE_INSTALL_PREFIX} PATH_SUFFIXES lib)
find_path(SPIRV_TOOLS_INCLUDE_DIR NAMES spirv-tools/libspirv.h HINTS ${CMAKE_INSTALL_PREFIX} ${CMAKE_INSTALL_PREFIX}/include/spirv-tools PATH_SUFFIXES include)
find_library(SPIRV_TOOLS_OPT_LIBRARY_DEBUG NAMES SPIRV-Tools-optd HINTS ${CMAKE_INSTALL_PREFIX} PATH_SUFFIXES DEBUG/lib)
find_library(SPIRV_TOOLS_OPT_LIBRARY_RELEASE NAMES SPIRV-Tools-opt HINTS ${CMAKE_INSTALL_PREFIX} PATH_SUFFIXES lib)

select_library_configurations(SPIRV_TOOLS)
select_library_configurations(SPIRV_TOOLS_OPT)

select_library_configurations(SPIRV_TOOLS) 

find_package_handle_standard_args(
    SPIRV-Tools
    DEFAULT_MSG
    SPIRV_TOOLS_LIBRARY
    SPIRV_TOOLS_OPT_LIBRARY
    SPIRV_TOOLS_INCLUDE_DIR
)

add_library(SPIRV-Tools STATIC IMPORTED GLOBAL )
set_property(TARGET SPIRV-Tools APPEND PROPERTY IMPORTED_CONFIGURATIONS "$<$<CONFIG:DEBUG>:Debug>$<$<CONFIG:RELEASE>:Release>")
set_target_properties(
SPIRV-Tools
    PROPERTIES
    IMPORTED_LOCATION ${SPIRV_TOOLS_LIBRARY}
    INCLUDE_DIRECTORIES ${SPIRV_TOOLS_INCLUDE_DIR} 
)

set_target_properties(SPIRV-Tools PROPERTIES INTERFACE_INCLUDE_DIRECTORIES ${SPIRV_TOOLS_INCLUDE_DIR} )

add_library(SPIRV-Tools-opt UNKNOWN IMPORTED GLOBAL)
set_property(TARGET SPIRV-Tools-opt APPEND PROPERTY IMPORTED_CONFIGURATIONS "$<$<CONFIG:DEBUG>:Debug>$<$<CONFIG:RELEASE>:Release>")
set_target_properties(
    SPIRV-Tools-opt
    PROPERTIES
        IMPORTED_LOCATION ${SPIRV_TOOLS_OPT_LIBRARY}
        INCLUDE_DIRECTORIES ${SPIRV_TOOLS_INCLUDE_DIR}
)